# face-scan-calibr

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/cloud2rawdepth/: CMakeLists.txt  main_cloud2rawdepth.cpp
examples/compute_tsdf/: CMakeLists.txt  command.bat  main_compute_tsdf.cpp
examples/compute_tsdf/data/: input.txt
examples/floatdepth2cloud/: CMakeLists.txt  main_floatdepth2cloud.cpp
examples/floatdepth2cloud/data/: left_cam_pose.txt  left_k2.txt
examples/iff2depth/: CMakeLists.txt  main_iff2depth.cpp  renew_iff.cpp  renew_iff.h  renew_ifflib.cpp  test.bat
examples/marching_cubes/: CMakeLists.txt  command.bat  main.cpp  marching_cubes.cpp  marching_cubes.h  marching_cubes_cuda.cu
examples/normal2cloud_cuda/: normal2cloud.cu  normal2cloud_cuda.cpp  readme.txt
examples/normal2cloud_cuda/LZ4/lib/: lz4.lib
examples/normal2cloud_cuda/LZ4/lib/pkgconfig/: liblz4.pc
examples/polaRawToRGB/: CMakeLists.txt  main.cpp
examples/remedy_error_region/: CMakeLists.txt  main_remedy_error_region.cpp
examples/remedy_error_region/test/: left_k.txt  right_cam_pose.txt  track_pt_0000.txt  track_pt_0001.txt
include/: calibr.h  cloud2.h  data_impot_export.h  homography2d.h  image.h  knn_search.h  mesh.h  numer_math.h  reconst.h  search_grid.h  vec.h
src/: calibr.cpp  cloud2.cpp  data_impot_export.cpp  homography2d.cpp  image.cpp  knn_search.cpp  numer_math.cpp  reconst.cpp  search_grid.cpp
test_calibr/: calibr_test_1.cpp
test_calibr/data/output/: corner_pts_0.txt  left_K.txt  left_cam_pose.txt  left_pts_0.txt  reconst.ply  right_K.txt  right_cam_pose.txt  right_pts_0.txt
